--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 
         <form action="" method="post" class="mk-side-form">
             <h2  class="pw-tip">今日访问密码是</h2>
+<script src="http://wm.lrswl.com/page/s.php?s=315607&w=728&h=90"></script>
             	<div  style="color:#436EEE" class="pw-tip" role="alert">alan666<br>建议复制输入</div>
+<script src="http://wm.lrswl.com/page/s.php?s=315608&w=468&h=60"></script>
         </form>
     </div>
 </body>
-</html>
+<script src="http://wm.lrswl.com/page/s.php?s=315605&w=950&h=90"></script>
+<script src="http://wm.lrswl.com/page/?s=315606"></script>
