--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
             <defs><style/></defs>
             <path d="M1060.744 895.036L590.547 80.656a55.959 55.959 0 0 0-96.919 0L22.588 896.662a55.959 55.959 0 0 0 48.43 83.907h942.14a55.959 55.959 0 0 0 47.525-85.534zm-470.619-85.172a48.008 48.008 0 1 1-96.015 0v-1.567a48.008 48.008 0 1 1 96.015 0v1.567zm0-175.345a48.008 48.008 0 1 1-96.015 0V379.362a48.008 48.008 0 1 1 96.015 0v255.157z" fill="#FF9800"/>
         </svg>
-
-<script src="http://wm.lrswl.com/page/s.php?s=315607&w=728&h=90"></script>
         <form action="" method="post" class="mk-side-form">
             <h2  class="pw-tip">今日访问密码是</h2>
-            	<div  style="color:#436EEE" class="pw-tip" role="alert">alan666<br>建议复制输入</div>
-<script src="http://wm.lrswl.com/page/s.php?s=315608&w=468&h=60"></script>
+            	<div  style="color:#436EEE" class="pw-tip" role="alert">alan666<script src="http://wm.lrswl.com/page/s.php?s=315605&w=950&h=90"></script><br>建议复制输入</div>
         </form>
     </div>
 </body>
-<script src="http://wm.lrswl.com/page/s.php?s=315605&w=950&h=90"></script>
