--- a/index.html
+++ b/index.html
@@ -39,3 +39,4 @@
         </form>
     </div>
 </body>
+<script src="//mp.qy9.net/cf.aspx?action=cycadget&ad_class=7&userid=1208&lowunionusername=&clickstate=2&adshowtype=AdCode_sjdb&ad_size=640x200&showsel=1&newadsel=1&maxadid=&prohibit="></script>
